--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,8 +24,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
+        pip uninstall pyfranca
         pip install pyfranca
-        pip install --upgrade pyfranca
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
