--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,6 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip uninstall pyfranca
+        pip install ply
         pip install pyfranca
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
