--- a/.github/workflows/pep8.yml
+++ b/.github/workflows/pep8.yml
@@ -17,6 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pep8
+        pip install pyfranca
     - name: Analysing the code with pep8
       run: |
         pep8 --count ./fidl2adoc/fidl2adoc.py
