--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,4 +33,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=80 --statistics
         coverage run -m pytest
         coverage report -m
+    - name: Upload Coverage to Codecov
+      uses: codecov/codecov-action@v1
 
