--- a/.github/workflows/pep8.yml
+++ b/.github/workflows/pep8.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pep8
+        pip install pycodestyle
     - name: Analysing the code with pep8
       run: |
-        pep8 --count ./fidl2adoc/fidl2adoc.py
+        pycodestyle --count ./fidl2adoc/fidl2adoc.py
