--- a/.github/workflows/pep8.yml
+++ b/.github/workflows/pep8.yml
@@ -17,6 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pycodestyle mypy prospector pylama bandit pylint
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Analysing the code with pep8
       run: |
         pycodestyle --count ./fidl2adoc/fidl2adoc.py
