--- a/.github/workflows/pep8.yml
+++ b/.github/workflows/pep8.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pycodestyle mypy prospector pylama bandit pylint
+        pip install pycodestyle mypy prospector pylama bandit pylint json-extended
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Analysing the code with pep8
       run: |
