--- a/.pylintrc
+++ b/.pylintrc
@@ -1,8 +1,8 @@
 [FORMAT]
 max-line-length=79
 
-[MASTER]
-load-plugins=pylint_json2html
+# [MASTER]
+# load-plugins=pylint_json2html
 
-[REPORTS]
-output-format=jsonextended
+# [REPORTS]
+# output-format=jsonextended
